FISH-8652: Use byte reading in HazelcastDataConnectionConfigLoader.