@@ -24,6 +24,7 @@ import com.hazelcast.logging.ILogger;
 import com.hazelcast.logging.Logger;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -64,7 +65,7 @@ public class HazelcastDataConnectionConfigLoader {
     private String readFileContent(String filePath) {
         try {
             Path path = Paths.get(filePath);
-            return Files.readString(path);
+            return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
         } catch (IOException exception) {
             throw new HazelcastException("Unable to read file :" + filePath);
         }
